--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="main-footer__social-row">
 
             <form action="Curriculim2.pdf" target="_blank">
-                <button type="submit" class="btn-pdf">Mi Currículim</button>
+                <button type="submit" class="btn-pdf">Mi Currículum</button>
             </form>
           </div>
         </div>
